--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 
 spring.data.rest.basePath=/api
+logging.level.org.hibernate.SQL=DEBUG
 
 spring.datasource.url= jdbc:mysql://127.0.0.1:49954/localdb
 spring.datasource.username=azure
 spring.datasource.password=6#vWHD_$
+
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
