--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.data.rest.basePath=/api
 logging.level.org.hibernate.SQL=DEBUG
 
-spring.datasource.url= jdbc:mysql://127.0.0.1:49954/localdb
+spring.datasource.url= jdbc:mysql://127.0.0.1:49954/localdb?serverTimezone=UTC
 spring.datasource.username=azure
 spring.datasource.password=6#vWHD_$
 
