--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,20 @@
 spring.data.rest.basePath=/api
 logging.level.org.hibernate.SQL=DEBUG
 
+##spring.datasource.url= jdbc:mysql://127.0.0.1:3306/bookstore
+##spring.datasource.username=dbuser
+##spring.datasource.password=masih1980?!M
+
+##spring.jpa.show-sql=true
+##spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+
+
+
 spring.datasource.url= jdbc:mysql://127.0.0.1:49954/localdb?serverTimezone=UTC
 spring.datasource.username=azure
 spring.datasource.password=6#vWHD_$
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
