--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.data.rest.basePath=/api
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://127.0.0.1:49954/localdb
+spring.datasource.url=jdbc:mysql://127.0.0.1:49954/localdb?serverTimezone=UTC+2
 spring.datasource.username=azure
 spring.datasource.password=6#vWHD_$
 spring.jpa.show-sql=true
